Initialized All The Changes For Production